Fixed some card spacing and color issues

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -30,7 +30,7 @@ body{
 }
 
 .card_base{
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.8);
     width: 30%;
     display: flex;
     flex-direction: column;
